[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "files_com"
version = "1.5.6"
description = "Python bindings for the Files.com API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.5"
dependencies = [
    "requests >= 2.20",
    "requests-toolbelt >= 1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "doc"]

[tool.setuptools.package-data]
files_sdk = ["../_VERSION", "../README.md"]

[tool.black]
line-length=79
include="files_sdk/"
[tool.pyright]
include=["files_sdk"]
reportMissingTypeArgument=true
reportUnnecessaryCast=true
reportUnnecessaryComparison=true
reportUnnecessaryContains=true
reportUnnecessaryIsInstance=true
# The project currently uses dynamic types
reportGeneralTypeIssues=false